@@ -55,8 +55,5 @@ No hace falta, dejamos que se guarde el estado anterior antes del Run, y si ha p
 posiblemente habrá mucha cosa a mostrar como cambiada
 
 
--funcion (fkey/icono) que permita enviar abrir menu y enviar pulsaciones de hotkeys, para poder lanzar la mayoria de acciones de menus
-interceptar menu_da_todas_teclas,
-ok *icono para F_FUNCION_SEND_KEYS_MENU
-*changelog
-*quitar debug
+ok -funcion (fkey/icono) que permita enviar abrir menu y enviar pulsaciones de hotkeys, para poder lanzar la mayoria de acciones de menus
+
