@@ -3,6 +3,7 @@ ZEsarUX 13 - xxx edition. 08 October 2025
 Added setting to automatically order icons on ZX Desktop
 Allow drag&drop of compressed files
 Allow to reduce display to half
+Added f-key/icon to trigger an action ("SendKeysMenu") to send keys to menu, for example send keys "tti" to open input tape
 
 Improved ZX Vision:
 - Added new Top Menu (not enabled by default)
